[Feat] /auction/prices echo api 및 프로젝트 셋팅

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=todayfarmhub
+
+# ?????? URL ?? (?: MySQL)
+spring.datasource.url=jdbc:mariadb://localhost:3306/today_farm_hub
+# ?????? ??? ??
+spring.datasource.username=root
+# ?????? ????
+spring.datasource.password=jshag90
+# ???? ??? ??
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+# Hibernate DDL ?? (??)
+spring.jpa.hibernate.ddl-auto=none
+
