[Feat] 농작물 조회 카테고리 저장 엔티티 클래스 생성

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 spring.application.name=todayfarmhub
 
-spring.datasource.url=jdbc:mariadb://localhost:3306/today_farm_hub
+spring.datasource.url=jdbc:mariadb://localhost:3306/today_farm_hub?autoReconnect=true
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=none
+
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
 
 today.farm.orgin.api.url=https://www.agrion.kr/portal/fdp/fpi/selectRltmAucBrkNewsTobeList.do
-
