--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.3.0'
 	id 'io.spring.dependency-management' version '1.1.5'
+	id 'war'
 }
 
 group = 'com.dodamsoft.todayfarmhub'
@@ -25,6 +26,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'jakarta.servlet:jakarta.servlet-api'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
@@ -33,6 +35,14 @@ dependencies {
 	implementation 'org.mariadb.jdbc:mariadb-java-client'
 	implementation group: 'org.apache.httpcomponents.client5', name: 'httpclient5', version: '5.3.1'
 	implementation group: 'com.google.code.gson', name: 'gson', version: '2.10.1'
+}
+
+bootWar.enabled = false
+war.enabled = true
+
+bootWar{
+	archiveBaseName = 'ROOT'
+	archiveFileName = 'ROOT'
 }
 
 tasks.named('test') {
