[Feat] 농작물 대분류 카테고리 조회 요청 기능 로직 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,5 @@ spring.datasource.password=1234
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
-today.farm.orgin.api.url=https://www.agrion.kr/portal/fdp/fpi/selectRltmAucBrkNewsTobeList.do
