--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=todayfarmhub
 
 spring.datasource.url=jdbc:mariadb://localhost:3306/today_farm_hub?autoReconnect=true
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=jshag90
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 spring.jpa.generate-ddl=true
