--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 spring.application.name=todayfarmhub
 
+spring.profiles.active=prod
+#spring.profiles.active=dev
+
 spring.datasource.url=jdbc:mariadb://localhost:3306/today_farm_hub?autoReconnect=true
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=${datasource.password}
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 spring.jpa.generate-ddl=true
