[Feat](auction): 선호 카테고리 기반 경매 데이터 자동 수집 기능 구현
인기 경매 카테고리 추적을 위한
FavoriteCategory
 엔티티 및 리포지토리 추가
매일 새벽 2시 상위 10개 선호 카테고리 가격을 자동 수집하는
AuctionScheduler
 구현
AuctionService 내 카테고리 조회수 증가 및 스케줄러 연동 데이터 수집 로직 추가
@EnableScheduling 설정을 통한 애플리케이션 스케줄링 기능 활성화
개발 환경 편의성을 위한 profile(dev) 전환 및 JPA DDL 자동 갱신 설정 적용

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,1 +1,8 @@
-datasource.password=1234
+datasource.password=12345
+
+# JPA DDL settings for dev profile
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=false
+logging.level.org.hibernate.SQL=INFO
+logging.level.org.hibernate.tool.schema=INFO
