--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=todayfarmhub
 
-#spring.profiles.active=prod
-spring.profiles.active=dev
+spring.profiles.active=prod
+#spring.profiles.active=dev
 
 spring.datasource.url=jdbc:mariadb://localhost:3306/today_farm_hub?autoReconnect=true
 spring.datasource.username=root
